# benchmarks

./: .gitmodules  scripts
aggregates_gss/: claspwrapper.sh  run.sh
aggregates_kcc/: f-aggregates.py  prepare.sh  run.sh
aggregates_kcc/disjunctionencoding/: kcc.asp
aggregates_kcc/hex/: kcc.hex  kcc.py
aggregates_kcc/original/: 1-graph_colouring-125-0.asp  10-graph_colouring-125-0.asp  11-graph_colouring-130-0.asp  12-graph_colouring-130-0.asp  13-graph_colouring-130-0.asp  14-graph_colouring-130-0.asp  15-graph_colouring-130-0.asp  16-graph_colouring-130-0.asp  17-graph_colouring-130-0.asp  18-graph_colouring-130-0.asp  19-graph_colouring-130-0.asp  2-graph_colouring-125-0.asp  20-graph_colouring-130-0.asp  21-graph_colouring-135-0.asp  22-graph_colouring-135-0.asp  23-graph_colouring-135-0.asp  24-graph_colouring-135-0.asp  25-graph_colouring-135-0.asp  26-graph_colouring-135-0.asp  27-graph_colouring-135-0.asp  28-graph_colouring-135-0.asp  29-graph_colouring-135-0.asp  3-graph_colouring-125-0.asp  30-graph_colouring-135-0.asp  31-graph_colouring-140-0.asp  32-graph_colouring-140-0.asp  33-graph_colouring-140-0.asp  34-graph_colouring-140-0.asp  35-graph_colouring-140-0.asp  36-graph_colouring-140-0.asp  37-graph_colouring-140-0.asp  38-graph_colouring-140-0.asp  39-graph_colouring-140-0.asp  4-graph_colouring-125-0.asp  40-graph_colouring-140-0.asp  41-graph_colouring-145-0.asp  42-graph_colouring-145-0.asp  43-graph_colouring-145-0.asp  44-graph_colouring-145-0.asp  45-graph_colouring-145-0.asp  (+20 more)
aggregates_kcc/testinst/: disj.asp  f-stable.asp  hex-ea.hex  hex.hex  plugin.py
aggregates_qbf/: convert2qbf.py  prepare.sh  run.sh
aggregates_qbf/original/preprocessing/: ethernet-fixpoint-3.qdimacs  jnh205-90.qdimacs  sortnetsort10.AE.stepl.008.qdimacs  stmt17_70_82.qdimacs  stmt17_74_78.qdimacs  stmt17_82_86.qdimacs  stmt17_94_98.qdimacs  stmt19_83_91.qdimacs  stmt23_92_96.qdimacs  stmt31_276_328.qdimacs  stmt41_160_235.qdimacs  stmt41_286_385.qdimacs  stmt47_290_340.qdimacs  stmt47_340_389.qdimacs
argu/: AUTHORS  configure.ac
argu/benchmarks/liberalsafety/: aggregate.hex  aggregateresults.sh  benchmark_all.sh  benchmark_single.sh  run.sh
argu/benchmarks/ufs/: aggregateresults.sh  benchmark_all.sh  benchmark_single.sh  doaggregation.sh  run.sh
argu/benchmarks/wjflp/: benchmark_all.sh  benchmark_single.sh  doaggregation.sh  run.sh
argu/examples/: benchmark.sh  benchmark_all.sh  benchmark_single.sh  callgenerateset.sh  example2.argu  example3.argu  generate.sh  generateset.sh  manual_adm.hex  manual_pref.hex
argu/examples/tests/: example2_ideal.out  manual_adm.out  manual_pref.out
argu/src/: Makefile.am  arguplugin.cpp  ideal.encoding  ideal_naive.encoding  idealset.encoding  pref.encoding
argu/trunk/: configure.ac
argu/trunk/examples/: benchmark.sh  cmp.hex  manual.hex  manual_adm.hex  manual_pref.hex  runningexample.argu  sha1sum.hex
argu/trunk/src/: Makefile.am  adm.encoding  arguplugin.cpp  evalheur.asp  idealset.encoding  pref.encoding  stringplugin.cpp
argu/trunk/testsuite/: Makefile.am
argu/vs10/: argu.sln
argu/vs10/argu/: argu.vcxproj  argu.vcxproj.filters  config.h
flightplan/: flightplan.hex  flightplan.hex~  flightplan.py  flightplan.py~  flightplan1.hex~  instance1.hex  test.py  test.py~
maze/: README  configure.ac
maze/benchmarks/: schedule_full.sh  schedule_only_sub.job  schedule_only_sub.sh  schedule_only_subtram.job  schedule_only_subtram.sh  scheduleall.sh
maze/benchmarks/pairrouteplanning-viennapublic/: aggregateresults.sh  benchmark_all.sh  benchmark_all_only_sub.sh  benchmark_all_only_subtram.sh  benchmark_single.sh  benchmark_single_only_sub.sh  benchmark_single_only_subtram.sh  convertToSingleInstances.sh  format.sh  (+25 more)
maze/examples/: benchmark_all.sh  benchmark_single.sh  benchmark_single.sh~  createRandomInstance.sh  format.sh  g2.graph  g3.graph  g4.graph  gas.hex  generate.sh  getedges.hex  lines.hex  map.hex  platforms.hex  route.hex  routeplanning.hex  routeplanning_simple.hex  routeplanning_simple.py  salzburg.hex  stops.hex  transform.sh  vienna-publictransport.hex  vienna-publictransport2.hex
maze/src/: maze.cpp
maze/trunk/: AUTHORS  configure.ac
maze/trunk/src/: Makefile.am  createProgram.sh  maze.cpp  strategic.cpp
maze/vs10/: maze.sln
sat/: configure.ac
sat/examples/: sat-3cnf-10-45_1.dimacs  sat-3cnf-8-65_2.dimacs  satmode-1-sat.hex  satmode-2-unsat.hex  unsat-3cnf-10-65_1.dimacs  unsat-3cnf-8-65_2.dimacs  unsatmode-1-sat.hex  unsatmode-2-unsat.hex
sat/trunk/: ChangeLog  Makefile.am  README  configure.ac
sat/trunk/src/: Makefile.am  sat-unsat.cpp
sat/trunk/testsuite/: Makefile.am
scripts/: README  Readme.tex  aggregateresults.sh  ansctimeoutputbuilder.sh  colselect.sh  compare.sh  debugoutputbuilder.sh  dlvhex_allbenchmarksdef  dlvhex_allbenchmarksdef_template  dlvhex_run_header.sh  gstimeoutputbuilder.sh  mergetables.sh  multibenchmark.sh  req_template  reqseq  run_template.sh  runall.sh  runconfigs.sh  runinsts.sh  schedulecondor.sh  sendnotification.sh  setup.sh  sgtimeoutputbuilder.sh  timeoutputbuilder.sh  tolatextable.sh
sensor/: AUTHORS  ChangeLog  NEWS  README
sensor/.svn/: all-wcprops  entries
sensor/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
sensor/benchmarks/: benchmark_all.sh  benchmark_single.sh  doaggregation.sh  domain_anyobjectmovement.hex  domain_anyobjectposition_oneobject.hex  run.sh
sensor/examples/: Makefile.am  senseObject.hex
sensor/src/: Makefile.am  sensors.cpp
sensor/src/.deps/: sensors.Plo
sensor/src/.svn/: all-wcprops  entries
sensor/src/.svn/text-base/: sensors.cpp.svn-base
sensor/vs10/: sensor.sln
strategiccompanies/: configure.ac
strategiccompanies/examples/: 01-strategic_companies-0-0.hex  11-strategic_companies-0-0.hex  21-strategic_companies-0-0.hex  21-strategic_companies-0-0.txt  31-strategic_companies-0-0.txt  41-strategic_companies-0-0.txt
strategiccompanies/src/: strategic.cpp
sudoku/: NEWS  configure.ac
sudoku/examples/: benchmark.sh
sudoku/src/: sudoku.cpp
sudoku/trunk/src/: Makefile.am
(+8217 files in other folders)
